--- a/01-currency-exchange-microservice-basic/pipeline-backups/02-understanding-stages.yml
+++ b/01-currency-exchange-microservice-basic/pipeline-backups/02-understanding-stages.yml
@@ -23,6 +23,8 @@ stages:
     - bash: python --version 
     - bash: mvn -version 
     - bash: ls -R $(Build.ArtifactStagingDirectory)
+    - powershell: |
+         echo "$(resources.pipeline.simclient_Binaries.runName)"
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(System.DefaultWorkingDirectory)'
